<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/linear_layout_single_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/text_View_Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="serif"
                android:text="@string/this_is_header"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimaryText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/text_View_Author"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:fontFamily="serif"
                    android:text="@string/author"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text_View_Published_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/published_at"
                    android:textAlignment="center"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/image_share"
                    android:layout_width="0dp"
                    android:layout_height="27dp"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/share_news"
                    android:scaleType="center"
                    android:src="@mipmap/ic_launcher_foreground_share_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_View_Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="serif"
                android:text="@string/description"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimaryText" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_news"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher_logo" />


            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>